--- a/index.html
+++ b/index.html
@@ -1,12 +1,175 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <title>Научиться учиться</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles/style.css">
+  <link rel="stylesheet" href="styles/normalize.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css">
 </head>
-<body>
-    <h1>My first project</h1>
+<body class="page">
+  <!-- section header -->
+  <header class="header">
+    <div>
+      <img src="images/logo_place_header.svg" alt="yandex logo" class="header__logo_place_header">
+      <h1 class="header__title">Научиться учиться</h1>
+      <h2 class="header__subtitle">
+        Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
+        <a href="#" class="header__link">Узнать<i class="fas fa-long-arrow-alt-right"></i></a>
+      </h2>
+    </div>
+    <div>
+      <img src="images/header-image.png" alt="image" class="header__main-illustration">
+    </div>
+    <div class="header__square-pic"></div>
+  </header>
+  <!-- section main -->
+  <main class="content">
+    <!-- section discription -->
+    <section class="two-columns">
+      <div class="two-columns__brief">
+        <h3>Главные проблемы в обучении</h3>
+      </div>
+      <div class="two-columns__main-text">
+        <p class="two-columns__paragraph">
+          Ни в школе, ни в институте нас не учат тому, как правильно изучать материал.
+          Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи,
+          чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания.
+          Зубрежка быстро выветривается и не приносит пользы.
+        </p>
+        <p class="two-columns__paragraph">
+          <span class="two-columns__span-accent">Вывод:</span> учиться тоже нужно уметь, но 
+          почему-то этому мало где учат. Что с этим делать?
+        </p>
+        <p class="two-columns__paragraph">
+          Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным
+          и захватывающим. Эти же техники применяются на примере обучения в Практикуме.
+        </p>
+      </div>
+    </section>
+    <!-- section digits -->
+    <section class="digits">
+      <h1 class="section__title">Цифры и факты</h1>
+      <h2 class="section__subtitle">Про учёбу и мозг</h2>
+      <div class="table">
+        <div class="table__cell">
+          <div class="table__heading">86 миллиардов</div>
+          <div class="table__text">Число нейронов в мозге человека</div>
+        </div>
+        <div class="table__cell">
+          <div class="table__heading">2.1 миллиарда</div>
+          <div class="table__text">Число нуждающихся в повышении квалификацииВсемирный Банк, 2017</div>
+        </div>
+        <div class="table__cell">
+          <div class="table__heading">1000 терабайт</div>
+          <div class="table__text">Объём памяти человека</div>
+        </div>
+        <div class="table__cell">
+          <div class="table__heading">500 триллионов</div>
+          <div class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</div>
+        </div>
+        <div class="table__cell">
+          <div class="table__heading">420 миллионов</div>
+          <div class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства Всемирный Банк, 2017</div>
+        </div>
+        <div class="table__cell">
+          <div class="table__heading">17–20 лет</div>
+          <div class="table__text">Пик обучаемости</div>
+        </div>
+        <div class="table__cell">
+          <div class="table__heading">1885 год</div>
+          <div class="table__text">Открытие кривой забывания</div>
+        </div>
+        <div class="table__cell">
+          <div class="table__heading">1889 год</div>
+          <div class="table__text">Открытие условного рефлекса</div>
+        </div>
+      </div>
+    </section>
+    <!-- section feynman -->
+    <section class="feynman">
+      <div class="feynman__text">
+        <h1 class="feynman__title">Метод Фейнмана</h1>
+        <h2 class="feynman__subtitle">Выучить и не забыть.</h2>
+        <a href="#" class="feynman__link">Подробнее<i class="fas fa-long-arrow-alt-right"></i></a>
+      </div>
+    </section>
+    <!-- section kaufman -->
+    <section class="kaufman">
+      <h1 class="section__title_theme_dark">Принципы обучения</h1>
+      <h2 class="section__subtitle_theme_dark">от Джоша Кауфмана</h2>
+      <div class="table__dark">
+        <div class="table__cell_theme_dark">
+          <div class="table__heading_theme_dark">1</div>
+          <div class="table__text_theme_dark">Выберите привлекательный проект.</div>
+        </div>
+        <div class="table__cell_theme_dark">
+          <div class="table__heading_theme_dark">2</div>
+          <div class="table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</div>
+        </div>
+        <div class="table__cell_theme_dark">
+          <div class="table__heading_theme_dark">3</div>
+          <div class="table__text_theme_dark">Определите целевой уровень мастерства.</div>
+        </div>
+        <div class="table__cell_theme_dark">
+          <div class="table__heading_theme_dark">4</div>
+          <div class="table__text_theme_dark">Разбейте навык на элементы.</div>
+        </div>
+        <div class="table__cell_theme_dark">
+          <div class="table__heading_theme_dark">5</div>
+          <div class="table__text_theme_dark">Приготовьте всё необходимое для занятий.</div>
+        </div>
+        <div class="table__cell_theme_dark">
+          <div class="table__heading_theme_dark">6</div>
+          <div class="table__text_theme_dark">Устраните препятствия для занятий.</div>
+        </div>
+        <div class="table__cell_theme_dark">
+          <div class="table__heading_theme_dark">7</div>
+          <div class="table__text_theme_dark">Выделите специальное время для занятий.</div>
+        </div>
+        <div class="table__cell_theme_dark">
+          <div class="table__heading_theme_dark">8</div>
+          <div class="table__text_theme_dark">Создайте быстрые петли обратной связи.</div>
+        </div>
+        <div class="table__cell_theme_dark">
+          <div class="table__heading_theme_dark">9</div>
+          <div class="table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</div>
+        </div>
+        <div class="table__cell_theme_dark">
+          <div class="table__heading_theme_dark">10</div>
+          <div class="table__text_theme_dark">Уделяйте внимание количеству и скорости.</div>
+        </div>
+      </div>
+      <div>
+        <img src="images/kaufman-triangle.svg" alt="triangle" class="kaufman__triangle">
+      </div>
+    </section>
+  </main>
+  <!-- section footer -->
+  <footer class="footer">
+    <div class="footer__columns">
+      <div class="footer__column-copyright">
+        <img src="images/logo_place_footer.svg" alt="logo yandex" class="footer__logo_place_footer">
+        <p class="footer__author">&copy;2019.Виктор Абанькин</p>
+      </div>
+      <div class="footer__column-info">
+        <h3 class="footer__column-heading">О Практикуме</h3>
+        <ul class="footer__column-links">
+          <li><a href="#" class="footer__column-link">Главная</a></li>
+          <li><a href="#" class="footer__column-link">Концепция</a></li>
+          <li><a href="#" class="footer__column-link">Наставники</a></li>
+        </ul>
+      </div>
+      <div class="footer__column-social">
+        <h3 class="footer__column-heading">Соцсети</h3>
+        <ul class="footer__column-social-icon">
+          <li><a href="#" class="footer__column-link"><img src="images/facebook_color_white.svg" alt="Facebook" class="footer__social-icon">Facebook</a></li>
+          <li><a href="#" class="footer__column-link"><img src="images/vk_color_white.svg" alt="ВКонтакте" class="footer__social-icon">ВКонтакте</a></li>
+          <li><a href="#" class="footer__column-link"><img src="images/instagram_color_white.svg" alt="Instagram" class="footer__social-icon">Instagram</a></li>
+        </ul>
+      </div>
+    </div>
+  </footer>
 </body>
 </html>
